--- a/style.css
+++ b/style.css
@@ -1,41 +1,68 @@
-body {margin: 0; padding: 0; overflow: hidden;}
-header {margin: 0; padding:0;}
-header{
-  height: 2.5rem; 
-  background-color: black; 
-  color: #fff; 
+body {
+  margin: 0; 
+  padding: 0; 
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.45;
   text-align: left; 
 }
+
+#container{
+  display: flex;
+  flex-flow: column;
+  height: 100%;  
+}
+
+header{
+  margin: 0; 
+  padding:0;
+  background-color: black; 
+  color: #fff; 
+  height: 5vh;
+}
+
+main {
+  height: 95vh;
+}
+
 .nav {
+  z-index:100;
   margin: 0;
   padding: 0;
+  height: 5vh;
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
+  justify-content: flex-start;
   list-style: none;
 }
 
 .nav-items{
   padding: 10px;
-}
+} 
 
 .title {
   font-weight: 600;
   padding-left: 20px;
 }
 
+
 .nav-items a{
-  color: #ddd;
+  color: #fff; 
   text-decoration: none;
+  text-align: center;
 }
 
 .nav-items a:hover{
-  color: #fff;
+  color: #ddd;
   text-decoration: underline;
+}
+
+#kepler{
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 iframe {
@@ -43,4 +70,11 @@ iframe {
   height: 100%; 
   width: 100%;
   border: none;
+}
+
+#model{
+  margin: 0 auto;
+  padding: 1rem 2rem;
+  max-width: 60rem;
+  overflow: visible;
 }
